--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng2-file-upload",
+  "name": "ng2-file-upload-moontech",
   "version": "1.3.0",
   "peerDependencies": {
     "@angular/common": "*",
